examples/type_system/failing/39_effect_alias_print_in_pure_function.flx
// parity-expected-stdout-begin
// "hi"
// parity-expected-stdout-end
// expect: compile_error
// skip: historical fixture currently compiles successfully

// E400: aliasing `print` must not bypass IO effect checks in pure functions.

fn f() -> Int {
    let p = print
    p("hi")
    1
}

fn main() -> Unit with IO {
    f();
}
